--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -5,6 +5,8 @@ default:
     - curl -L https://fly.io/install.sh | sh
 
 deploy:
+  tags:
+    - ci
   variables:
     FLY_API_TOKEN: $FLY_API_TOKEN
   script:
