--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,8 +1,9 @@
 default:
   image: node:16.14.0
   before_script:
-    - apt-get update -qq && apt-get install -y curl
-    - curl -L https://fly.io/install.ps1 -useb | iex
+    - apt-get update -qq
+    - apt-get install -y curl
+    - curl https://fly.io/install.ps1 -useb | iex
 
 deploy:
   tags:
