--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -9,6 +9,6 @@ deploy:
   variables:
     FLY_API_TOKEN: $FLY_API_TOKEN
   script:
-    - /root/.fly/bin/flyctl deploy
+    - flyctl deploy
   only:
     - develop
