--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -9,6 +9,6 @@ deploy:
   variables:
     FLY_API_TOKEN: $FLY_API_TOKEN
   script:
-    - C:\Windows\System32\config\systemprofile.fly\bin\flyctl deploy
+    - C:\Users\LENOVO\.fly\bin\flyctl deploy
   only:
     - develop
