--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,6 +1,7 @@
 default:
   image: node:16.14.0
   before_script:
+    - apk add --update iwr && rm -rf /var/cache/apk/*
     - iwr https://fly.io/install.ps1 -useb | iex
 
 deploy:
